switch from visibility to display to avoid hiding other entities

--- a/frontend_app/components/SiteNavigation.less
+++ b/frontend_app/components/SiteNavigation.less
@@ -43,7 +43,7 @@
     background-color: #E16860;
 
     .SiteNavigation--items--item--text {
-      visibility: visible;
+      display: inline-block;
     }
   }
 }
@@ -53,8 +53,7 @@
 }
 
 .SiteNavigation--items--item--text {
-  visibility: hidden;
-  display: inline-block;
+  display: none;
   background-color: #E16860;
   color: white;
   vertical-align: top;
